fix : options dark mode

--- a/apps/extension/styles/globals.css
+++ b/apps/extension/styles/globals.css
@@ -7,7 +7,7 @@ body{
 }
 
 html.dark {
-  @apply text-white bg-[#202022];
+  @apply text-white;
 }
 
 *{
